--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
 
       # Step 5: Build Docker image
       - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/nodejs-demo-app:latest .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/nodejs-app:latest .
 
       # Step 6: Login to DockerHub
       - name: Login to DockerHub
@@ -40,4 +40,5 @@ jobs:
 
       # Step 7: Push image to DockerHub
       - name: Push Docker Image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/nodejs-demo-app:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/nodejs-app:latest
+
