--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,18 +27,19 @@ jobs:
       - name: Run Tests
         run: npm test
 
-      # Step 5: Build Docker image
-      - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/nodejs-app:latest .
-
-      # Step 6: Login to DockerHub
+      # Step 5: Login to DockerHub
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 7: Push image to DockerHub
+      # Step 6: Build Docker image
+      - name: Build Docker Image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/nodejs-app:latest .
+
+      # Step 7: Push Docker image to DockerHub
       - name: Push Docker Image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/nodejs-app:latest
+
 
